--- a/src/tasks.json
+++ b/src/tasks.json
@@ -21,6 +21,6 @@
         "id": 3,
         "title": "task four",
         "description": "lorem ipsum",
-        "done": true
+        "done": false
     }
 ]
